# ci-cd-game

./: .gitignore
.github/workflows/: build packaging.yml  ci.yml  code_quality.yml  coverage.yml  matrix-build.yml  pr-branch-rule.yml  rust-quality.yml  test.yml
build package/: script.sh
debian/DEBIAN/: control
simeis-main/: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel  linuxstatus_1.1-1_all.deb  simeis_0.0.0-rc0_amd64.deb
simeis-main/debian/DEBIAN/: control  postinst
simeis-main/debian/etc/systemd/system/: simeis.service
simeis-main/doc/: BUILD.bazel
simeis-main/example/: client.py  gab2.json  gab3.json  gab55.json  gab56.json  gab57.json  gab58.json  gab59.json  trading-bot.py  watch_game.py
simeis-main/example/tests/: init-scenario.py
simeis-main/simeis-data/: BUILD.bazel
simeis-main/simeis-data/src/: ship.rs
simeis-main/simeis-server/: BUILD.bazel  Cargo.toml
simeis-main/simeis-server/src/: api.rs  main.rs
tests/: test_creer_player.py  tests.py
