# on charge les règles Bazel pour les librairies Rust
load("@rules_rust//rust:defs.bzl", "rust_library")

# charge les macros généré par crates_repository
load("@crates//:defs.bzl", "all_crate_deps")

# on déclare la librairie Rust pour simeis-data
rust_library(
    name = "simeis-data",
    srcs = glob(["src/**/*.rs"]),

    # le vrai nom du crate
    # (celui dans le 'name = "..."' de simeis-data/Cargo.toml)
    crate_name = "simeis-data",

    # On connecte les dépendances externes
    deps = all_crate_deps(
        normal = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    edition = "2021", # Doit être identique a l'édition déclaré dans WORKSPACE.bazel
)