# on charge les règles Bazel pour les librairies Rust
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
# charge les macros généré par crates_repository
load("@crates//:defs.bzl", "all_crate_deps")

# on déclare la librairie Rust pour simeis-data
rust_library(
    name = "simeis-data",
    visibility = ["//visibility:public"], # rendre la crate accessible aux autres packages Bazel
    srcs = glob(["src/**/*.rs"]),

    # le vrai nom du crate
    # (celui dans le 'name = "..."' de simeis-data/Cargo.toml)
    # bazel remplace les (-) par des (_) dans les noms de cibles
    # donc indiquer le vrai nom du crate ici est important
    crate_name = "simeis_data",

    # On connecte les dépendances externes
    deps = all_crate_deps(
        normal = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    edition = "2021", # Doit être identique a l'édition déclaré dans WORKSPACE.bazel
)

rust_test(
    name = "unit_tests",

    deps = [":simeis-data"] + all_crate_deps(normal = True),

    proc_macro_deps = all_crate_deps(proc_macro = True),

    rustc_flags = ["--test"],

    edition = "2021",
)